--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "cross-fetch": "^2.2.2",
     "npm": "^6.4.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
@@ -11,7 +12,9 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-spinners": "^0.4.4",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
